modificacion en home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -55,188 +55,248 @@
     <div class="swiper-button-next"></div>
   </div>
 </div>
-<div class="container text-center mt-5 mb-5">
-  <span class="texto_subtitle">Manzana Serrana</span>
-  <br>
-  <p class="texto_title bold">Teziutlán</p>
-</div>
-<div class="container mt-3 mb-3">
-  <div class="row">
-    <div class="col">
-      <div class="">
-        <img src="../../../assets/img/home1.jpg" class="card-img-top img-fluid" alt="...">
-        <div class="card-body mt-5">
-          <p class="descripcion_card">La característica principal de los productos orgánicos es que su proceso de
-            producción está libre de
-            plaguicidas, fertilizantes químicos. Son productos libres de hormonas, antibióticos, colorantes y
-            saborizantes artificiales. Además de ofrecer productos que traen beneficios para la salud al ser humano,
-            colabora con detener significativamente daños al medio ambiente y a la tierra de cultivo. (enAlimentos.lat,
-            2021).</p>
+<div>
+  <div class="container text-center mt-3 mb-5">
+    <span class="texto_subtitle">Manzana Serrana</span>
+    <br>
+    <p class="texto_title bold">Teziutlán</p>
+  </div>
+  <div class="container mt-3 mb-3">
+    <div class="row">
+      <div class="col">
+        <div class="">
+          <img src="../../../assets/img/home1.jpg" class="card-img-top img-fluid" alt="...">
+          <div class="card-body mt-5">
+            <p class="descripcion_card">La característica principal de los productos orgánicos es que su proceso de
+              producción está libre de
+              plaguicidas, fertilizantes químicos. Son productos libres de hormonas, antibióticos, colorantes y
+              saborizantes artificiales. Además de ofrecer productos que traen beneficios para la salud al ser humano,
+              colabora con detener significativamente daños al medio ambiente y a la tierra de cultivo.
+              (enAlimentos.lat,
+              2021).</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="">
-        <div class="card-body">
-          <p class="descripcion_card">
-            <b>Teziutlán, Puebla</b> es conocida por ser una región destacada en la producción de manzanas orgánicas de
-            alta
-            calidad. Los agricultores locales se esfuerzan por cultivar variedades únicas que prosperan en este entorno
-            particular, brindando productos orgánicos frescos y deliciosos a la comunidad y más allá.
-          </p>
+      <div class="col">
+        <div class="">
+          <div class="card-body">
+            <p class="descripcion_card">
+              <b>Teziutlán, Puebla</b> es conocida por ser una región destacada en la producción de manzanas orgánicas
+              de
+              alta
+              calidad. Los agricultores locales se esfuerzan por cultivar variedades únicas que prosperan en este
+              entorno
+              particular, brindando productos orgánicos frescos y deliciosos a la comunidad y más allá.
+            </p>
+          </div>
+          <img src="../../../assets/img/capilla.webp" class="card-img-bottom" alt="...">
         </div>
-        <img src="../../../assets/img/capilla.webp" class="card-img-bottom" alt="...">
       </div>
     </div>
   </div>
 </div>
 <div class="container mb-4">
+
+</div>
+<div class="border_rad bg_verde_claro">
   <div class="container text-center mb-1">
-    <p class="texto_title bold">Beneficios</p>
+    <p class="texto_title blanco">Propiedades y beneficios de la manzana</p>
   </div>
-  <div class="container-fluid">
-    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="health-tab" data-bs-toggle="tab" data-bs-target="#health" type="button"
-          role="tab" aria-controls="health" aria-selected="true">Salud</button>
-      </li>
-      <li class="nav-item" role="presentation">
-        <button class="nav-link" id="environment-tab" data-bs-toggle="tab" data-bs-target="#environment" type="button"
-          role="tab" aria-controls="environment" aria-selected="false">Medio Ambiente</button>
-      </li>
-    </ul>
-    <div class="tab-content" id="myTabContent">
-      <!-- Beneficios para la Salud -->
-      <div class="tab-pane fade show active" id="health" role="tabpanel" aria-labelledby="health-tab">
-        <h2 class="texto_card_big card-text mt-3">Propiedades Nutricionales</h2>
-        <p class="descripcion_card mt-2">Las manzanas orgánicas contienen una gran cantidad de nutrientes beneficiosos:</p>
-        <div class="card-group mb-3">
-          <div class="card">
-            <img src="../../../assets/img/fibra.jpg" class="card-img-top card-img-fixed" alt="...">
-            <div class="card-body">
-              <h5 class="texto_card text-center">Fibra</h5>
-              <p class="descripcion_card">Mejora el tránsito intestinal y reduce el colesterol.</p>
-            </div>
+  <div class="bg_blanco_carta">
+    <div class="row">
+      <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+        <p class="texto_card_big card-text m-2">Previene el estreñimiento</p>
+        <div class="row mt-1">
+          <div class="col-1">
+            1
           </div>
-          <div class="card">
-            <img src="../../../assets/img/c.webp" class="card-img-top card-img-fixed" alt="...">
-            <div class="card-body">
-              <h5 class="texto_card text-center">Vitamina C</h5>
-              <p class="descripcion_card">Fortalece el sistema inmune y es antioxidante.</p>
-            </div>
-          </div>
-          <div class="card">
-            <img src="../../../assets/img/potasio.jpeg" class="card-img-top card-img-fixed" alt="...">
-            <div class="card-body">
-              <h5 class="texto_card text-center">Potasio</h5>
-              <p class="descripcion_card">Reduce la presión arterial y previene calambres.</p>
-            </div>
+          <div class="col-11">
+            <p class="texto_card card-text">Contenido en fibra</p>
+            <p class="descripcion_card mt-2">La fibra en las manzanas favorece el tránsito intestinal y ayuda en la
+              digestión de las grasas, contribuyendo a la salud digestiva.</p>
           </div>
         </div>
-        <h2 class="texto_card_big mb-3">Propiedades y Beneficios de la Manzana</h2>
-        <ol class="custom-list descripcion_card">
-          <li><span class="list-number">1</span>Previene el estreñimiento. Su alto contenido en fibra favorece el
-            tránsito
-            intestinal y ayuda a la digestión de las grasas.</li>
-          <li><span class="list-number">2</span>Poder antioxidante. Su alto contenido en estos compuestos favorece la
-            regeneración celular.</li>
-          <li><span class="list-number">3</span>Mejora el sistema inmune. Su contenido en vitamina C aumenta las
-            defensas de
-            nuestro organismo.</li>
-          <li><span class="list-number">4</span>Favorece el bienestar. Contiene vitamina B, que aumenta los niveles de
-            energía.</li>
-          <li><span class="list-number">5</span>Perfecto para hacer dieta. La manzana es un snack perfecto, por su poder
-            saciante y sus bajas calorías.</li>
-          <li><span class="list-number">6</span>Es muy nutritiva. Es rica en minerales como el fósforo, potasio o
-            calcio.</li>
-          <li><span class="list-number">7</span>Disminuye la fatiga. Gracias a la presencia de ácido málico y ácido
-            tartárico.
-          </li>
-          <li><span class="list-number">8</span>Buena para los dientes. Protege la dentadura, mejora el estado de las
-            encías y
-            regula el pH de la boca.</li>
-        </ol>
+        <div class="row mt-1">
+          <div class="col-1">
+            2
+          </div>
+          <div class="col-11">
+            <p class="texto_card card-text">Salud Digestiva</p>
+            <p class="descripcion_card mt-2">La capacidad de las manzanas para promover la salud digestiva es
+              fundamental
+              para prevenir condiciones como el estreñimiento.</p>
+          </div>
+        </div>
+        <div class="row mt-1">
+          <div class="col-1">
+            2
+          </div>
+          <div class="col-11">
+            <p class="texto_card card-text">Acción Natural</p>
+            <p class="descripcion_card mt-2">Las propiedades naturales de las manzanas las convierten en un remedio
+              eficaz
+              para el estreñimiento sin la necesidad de productos químicos.</p>
+          </div>
+        </div>
       </div>
+      <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 ps-5">
+        <img src="../../../assets/img/vert_estre.png" alt="" class="img-fluid" style="max-width: 100%;">
+      </div>
+    </div>
+  </div>
 
+  <div class="bg_blanco_carta mt-3">
+    <p class="texto_card_big card-text m-2">Poder antioxidante</p>
+    <div class="row">
+      <div class="col">
+        <div class="row">
+          <div class="col-1">
+            1
+          </div>
+          <div class="col-11">
+            <p class="texto_card card-text">Regeneración celular</p>
+            <p class="descripcion_card mt-2">Las manzanas, ricas en antioxidantes, favorecen la regeneración celular,
+              manteniendo una piel sana y vitalidad interior.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="row">
+          <div class="col-1">
+            1
+          </div>
+          <div class="col-11">
+            <p class="texto_card card-text">Bienestar General</p>
+            <p class="descripcion_card mt-2">La capacidad antioxidante de las manzanas contribuye a una sensación de
+              bienestar y vitalidad en el cuerpo.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <!-- Beneficios para el Medio Ambiente -->
-      <div class="tab-pane fade" id="environment" role="tabpanel" aria-labelledby="environment-tab">
-        <div class="row texto_c mt-3">
-          <!-- Tarjeta 1 -->
-          <div class="col-md-12">
-            <div class="">
-              <img src="../../../assets/img/cultivos.jpg" class="card-img" alt="Imagen Tarjeta 1">
-              <div class="card-img-overlay">
-                <h5 class="">Cultivo Sostenible</h5>
-                <p class="">El cultivo de manzanas orgánicas se realiza de manera sostenible, lo que beneficia al medio ambiente en varios aspectos:</p>
-                <ul>
-                  <li>Menos uso de pesticidas y químicos.</li>
-                  <li>Preservación de la biodiversidad.</li>
-                  <li>Reducción de la erosión del suelo.</li>
-                </ul>
-              </div>
-            </div>
+  </div>
+  <div class="bg_blanco_carta mt-3">
+    <p class="texto_card_big card-text m-2">Mejora el sistema inmune</p>
+    <div class="row">
+      <div class="col-1">
+        1
+      </div>
+      <div class="col-11">
+        <p class="texto_card card-text">Contenido de vitamina C</p>
+        <p class="descripcion_card mt-2">Las manzanas contienen vitamina C, lo que refuerza las defensas del organismo,
+          manteniéndonos fuertes y saludables.</p>
+      </div>
+    </div>
+  </div>
+  <div class="bg_blanco_carta mt-3">
+    <p class="texto_card_big card-text m-2">Perfecto para hacer dieta</p>
+    <div class="row">
+      <div class="col-1">
+        1
+      </div>
+      <div class="col-11">
+        <p class="texto_card card-text">Snack saciante y bajo en calorías</p>
+        <p class="descripcion_card mt-2">Las manzanas, con su poder saciante y bajo contenido calórico, son un bocado
+          ideal para controlar el peso y mantener una dieta saludable.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="bg_blanco">
+  <div class="bg_blanco_carta mt-3">
+    <p class="texto_card_big card-text m-2">Favorece el bienestar</p>
+    <div class="row">
+      <div class="col">
+        <p class="texto_card card-text">Vitamina B</p>
+        <p class="descripcion_card mt-2">La vitamina B presente en las manzanas aumenta los niveles de energía,
+          promoviendo un estado general de bienestar y vitalidad.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="border_rad bg_verde_claro">
+  <div class="bg_blanco_carta">
+    <p class="texto_card_big card-text m-2">Reducción de la Huella Ambiental</p>
+    <div class="row">
+      <div class="col">
+        <div class="row pad_col">
+          <div class="col">
+            <p class="texto_card card-text">Minimizar el Uso de Recursos</p>
+            <p class="descripcion_card mt-2">Consumir manzanas orgánicas contribuye a la reducción de la huella
+              ambiental al minimizar el uso de recursos no renovables.</p>
           </div>
-      
-          <!-- Tarjeta 2 -->
-          <div class="col-md-12">
-            <div class="card text-bg-dark">
-              <img src="../../../assets/img/huella.jpg" class="card-img" alt="Imagen Tarjeta 2">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Reducción de la Huella Ambiental</h5>
-                <p class="card-text">Consumir manzanas orgánicas contribuye a la reducción de la huella ambiental al:</p>
-                <ul>
-                  <li>Minimizar el uso de recursos no renovables.</li>
-                  <li>Disminuir las emisiones de gases de efecto invernadero.</li>
-                  <li>Promover prácticas agrícolas ecológicas.</li>
-                </ul>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="row pad_col">
+          <div class="col">
+            <p class="texto_card card-text">Disminuir las Emisiones de Gases de Efecto Invernadero</p>
+            <p class="descripcion_card mt-2">La producción de manzanas orgánicas contribuye a disminuir las emisiones de
+              gases de efecto invernadero, promoviendo prácticas agrícolas ecológicas.</p>
           </div>
-      
-          <!-- Tarjeta 3 -->
-          <div class="col-md-12">
-            <div class="card text-bg-dark">
-              <img src="../../../assets/img/tres.jpg" class="card-img" alt="Imagen Tarjeta 3">
-              <div class="card-img-overlay">
-                <h5 class="card-title">Conservación de Recursos Naturales</h5>
-                <p class="card-text">El consumo de manzanas orgánicas ayuda a conservar los recursos naturales, incluyendo:</p>
-                <ul>
-                  <li>Agua: Reducción de la contaminación hídrica.</li>
-                  <li>Suelo: Evitar la degradación del suelo y la pérdida de la capa fértil.</li>
-                  <li>Ecosistemas: Protección de la diversidad biológica.</li>
-                </ul>
-              </div>
-            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bg_blanco_carta mt-3">
+    <p class="texto_card_big card-text m-2">Conservación de Recursos Naturales</p>
+    <div class="row">
+      <div class="col pad_col">
+        <div class="row">
+          <div class="col">
+            <p class="texto_card card-text">Agua: Reducción de la Contaminación Hídrica</p>
+            <p class="descripcion_card mt-2">El cultivo de manzanas orgánicas ayuda a reducir la contaminación del agua
+              al evitar el uso de químicos nocivos para esta fuente vital.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col pad_col">
+        <div class="row">
+          <div class="col">
+            <p class="texto_card card-text">Suelo: Evitar Degradación y Pérdida de Capa Fértil</p>
+            <p class="descripcion_card mt-2">Este método de cultivo evita la degradación del suelo, preservando su
+              fertilidad para futuros cultivos y manteniendo sus propiedades naturales.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col pad_col">
+        <div class="row">
+          <div class="col">
+            <p class="texto_card card-text">Ecosistemas: Protección de la Diversidad Biológica</p>
+            <p class="descripcion_card mt-2">El consumo de manzanas orgánicas contribuye a la protección de la
+              diversidad biológica al promover prácticas agrícolas sostenibles y ecológicas.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="bg_blanco mb-3">
+<div class="bg_blanco">
   <div class="container text-center mt-5">
-    <p class="texto_title bold">Productos</p>
-  </div>
-  <div class="bod">
-    <div class="swiper cartas">
-      <div class="swiper-wrapper">
-        <ng-container *ngFor="let pro of lista; let i = index">
-          <div class="swiper-slide">
-            <div class="">
-              <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(pro.foto)" class="card-img-fixed"
-                alt="...">
-              <div class="card-body">
-                <p class="card-text">{{pro.nombre}}</p>
-              </div>
-            </div>
-          </div>
-        </ng-container>
+    <p class="texto_title bold">Apoya a la Economia Local</p>
+    <div class="row mt-3">
+      <div class="col-md-6">
+        <p class="texto_num">500</p>
+        <p class="texto_card_big">Empleos Sostenibles</p>
+        <p class="descripcion_card_2">
+          La producción de manzanas orgánicas contribuye a la creación de más de 30,000 empleos sostenibles en la
+          industria agrícola local.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p class="texto_num">15</p>
+        <p class="texto_card_big">Granjas Familiares</p>
+        <p class="descripcion_card_2">
+          Al consumir manzanas orgánicas, se apoya a más de 150 granjas familiares comprometidas con la agricultura
+          sostenible.
+        </p>
       </div>
     </div>
   </div>
 </div>
-<div class="p-3">
+
+<div class="bg_blanco p-3">
   <div class="container">
     <iframe class="video" src="https://www.youtube.com/embed/GJHn7X9dtKY" frameborder="0" allowfullscreen></iframe>
   </div>
