--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -107,7 +107,7 @@
       <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
         <p class="texto_card_big card-text m-2">Previene el estreñimiento</p>
         <div class="row mt-1">
-          <div class="col-1">
+          <div class="col-1 numero-destacado">
             1
           </div>
           <div class="col-11">
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="row mt-1">
-          <div class="col-1">
+          <div class="col-1 numero-destacado">
             2
           </div>
           <div class="col-11">
@@ -128,8 +128,8 @@
           </div>
         </div>
         <div class="row mt-1">
-          <div class="col-1">
-            2
+          <div class="col-1 numero-destacado">
+            3
           </div>
           <div class="col-11">
             <p class="texto_card card-text">Acción Natural</p>
@@ -150,7 +150,7 @@
     <div class="row">
       <div class="col">
         <div class="row">
-          <div class="col-1">
+          <div class="col-1 numero-destacado">
             1
           </div>
           <div class="col-11">
@@ -162,8 +162,8 @@
       </div>
       <div class="col">
         <div class="row">
-          <div class="col-1">
-            1
+          <div class="col-1 numero-destacado">
+            2
           </div>
           <div class="col-11">
             <p class="texto_card card-text">Bienestar General</p>
@@ -178,7 +178,7 @@
   <div class="bg_blanco_carta mt-3">
     <p class="texto_card_big card-text m-2">Mejora el sistema inmune</p>
     <div class="row">
-      <div class="col-1">
+      <div class="col-1 numero-destacado">
         1
       </div>
       <div class="col-11">
@@ -191,8 +191,8 @@
   <div class="bg_blanco_carta mt-3">
     <p class="texto_card_big card-text m-2">Perfecto para hacer dieta</p>
     <div class="row">
-      <div class="col-1">
-        1
+      <div class="col-1 numero-destacado">
+        2
       </div>
       <div class="col-11">
         <p class="texto_card card-text">Snack saciante y bajo en calorías</p>
@@ -206,7 +206,7 @@
 <div class="bg_blanco">
   <div class="bg_blanco_carta mt-3">
     <p class="texto_card_big card-text m-2">Favorece el bienestar</p>
-    <div class="row">
+    <div class="row pad_col">
       <div class="col">
         <p class="texto_card card-text">Vitamina B</p>
         <p class="descripcion_card mt-2">La vitamina B presente en las manzanas aumenta los niveles de energía,
