--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,9 +2,9 @@
   <div class="container-fluid p-0 margin_nav">
     <div class="row">
       <div class="col-5 d-flex align-items-center">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="icon-menu"></span>
+          <span class="icon icon-menu"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="col-5">
-        <div class="d-flex justify-content-end mt-3">
+        <div class="d-flex justify-content-end mt-2">
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-face-blanco"></span></a>
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span
                 class="path2"></span><span class="path3"></span></span></a>
@@ -48,7 +48,6 @@
           <ng-template #iconDos>
             <a [routerLink]="['/login']" class="icon"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
           </ng-template>
-          
         </div>
       </div>
     </div>
