--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,7 +51,7 @@ $color_btn_sombra: rgba(30, 137, 80, 0.4);
     background-color: rgba(78, 149, 69, 0.8) !important;
 }
 
-.border_rad{
+.border_rad {
     border-radius: 0% !important;
 }
 
@@ -117,9 +117,10 @@ $color_btn_sombra: rgba(30, 137, 80, 0.4);
 
 /* Estilo para pestañas no activas */
 .nav-link:not(.active) {
-    color: $color_verde_card; /* Cambia "tu-color-aqui" al color deseado */
-  }
-  
+    color: $color_verde_card;
+    /* Cambia "tu-color-aqui" al color deseado */
+}
+
 .carta_blanca {
     background-color: #e9e5d7;
     display: flex;
@@ -569,6 +570,11 @@ input.form-control:focus {
     outline: 0 none;
 }
 
+
+.btn:focus {
+    box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0);
+}
+
 .texto_subtitle {
     font-family: $kamerik-book;
     font-size: clamp(10px, -0.875rem + 8.333333vw, 20px);
@@ -595,7 +601,7 @@ input.form-control:focus {
     font-size: clamp(0.1rem, -0.875rem + 8.333333vw, 1.1rem);
 }
 
-.texto_num{
+.texto_num {
     font-family: $kamerik-bold;
     font-size: clamp(1rem, -0.875rem + 8.333333vw, 2.2rem);
     color: $color_gris_oscuro;
@@ -614,7 +620,7 @@ input.form-control:focus {
 
 .icon {
     margin: 0% 10% 0px 0px;
-    font-size: clamp(15px, -0.875rem + 8vw, 25px);
+    font-size: clamp(1px, -0.875rem + 8vw, 25px);
     text-decoration: none;
     color: $color_gris;
 }
@@ -690,22 +696,28 @@ nav {
     margin-top: 2rem;
 }
 
-.pad_col{
+.pad_col {
     padding: 0% 3% 0% 3%;
 }
 
 .numero-destacado {
-    text-align: end; /* Centrar el texto */
+    text-align: end;
+    /* Centrar el texto */
     height: 5%;
     width: auto;
     margin: 5px;
-    padding: 8px; /* Añadir espacio alrededor del número */
-    border: 2px solid #4E9545; /* Establecer un borde de 2 píxeles de ancho con color verde (#4E9545) */
-    border-radius: 5px; /* Agregar bordes redondeados */
-    background-color: #4E9545; /* Establecer el color de fondo verde */
-    color: #ffffff; /* Establecer el color del texto en blanco */
-  }
-  
+    padding: 8px;
+    /* Añadir espacio alrededor del número */
+    border: 2px solid #4E9545;
+    /* Establecer un borde de 2 píxeles de ancho con color verde (#4E9545) */
+    border-radius: 5px;
+    /* Agregar bordes redondeados */
+    background-color: #4E9545;
+    /* Establecer el color de fondo verde */
+    color: #ffffff;
+    /* Establecer el color del texto en blanco */
+}
+
 @media (max-width: 1000px) {
     .texto_small_swiper {
         font-size: 1rem;
@@ -756,13 +768,12 @@ nav {
     .borde {
         margin: 5% 10% 10% 10%;
     }
-
-    .gap_null{
-        gap: 0rem !important;
-    }
 }
 
 @media (max-width: 550px) {
+    .margin-top-nav {
+        margin-top: 0.4rem !important;
+    }
     .texto_small_swiper {
         font-size: 0.5rem;
     }
@@ -783,6 +794,10 @@ nav {
         object-fit: cover;
         width: 100%;
         height: 200px;
+    }
+
+    .img_nav {
+        margin-top: 0px !important;
     }
 }
 
