--- a/src/app/layoutad/layout-admin/layout-admin.component.html
+++ b/src/app/layoutad/layout-admin/layout-admin.component.html
@@ -1,6 +1,6 @@
 <div id="">
     <app-nav></app-nav>
-    <div style="background-color: #fff; margin-bottom: 1%; margin-top: 150px;">
+    <div class="lay_ad">
         <router-outlet></router-outlet>
     </div>
 </div>
